--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.ide.rider": "3.0.27",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.6.3",
+    "com.unity.mobile.notifications": "2.2.2",
     "com.unity.testtools.codecoverage": "1.2.5",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.6",
